Fix static files with WhiteNoise

--- a/render.yaml
+++ b/render.yaml
@@ -15,4 +15,4 @@ services:
       - key: DJANGO_SECRET_KEY
         generateValue: true
       - key: DEBUG
-        value: "True"
+        value: "False"
